--- a/JavaAssignment/src/main/resources/templates/login.html
+++ b/JavaAssignment/src/main/resources/templates/login.html
@@ -1,10 +1,43 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+	th:replace="base::layout(~{::div})">
 <head>
-	<meta charset="UTF-8" />
-	<title>Document</title>
+<meta charset="UTF-8" />
+<title th:text="${title}">Document</title>
 </head>
 <body>
-	
+
+
+	<div class="container main">
+		<div class="sub-container secondary">
+		<h2 class="text-center mb-5">Login Page</h2>
+			<form>
+				<!-- Email input -->
+				<div class="form-outline mb-4">
+					<input type="email" placeholder="Email Address" id="form3Example3"
+						class="form-control" name="email"/>
+				</div>
+
+				<!-- Password input -->
+				<div class="form-outline mb-4">
+					<input type="password" placeholder="Password" id="form3Example4"
+						class="form-control" name="password" />
+				</div>
+
+
+
+				<!-- Submit button -->
+				<div class="form-outline mb-4 button">
+					<button type="submit" class="btn btn-primary btn-block mb-4">Login</button>
+				</div>
+
+				<!-- Register buttons -->
+				<div class="text-center">
+					<p>Don't Have An Account? <a th:href="@{/signup}">Sign Up</a></p>
+
+				</div>
+			</form>
+		</div>
+	</div>
 </body>
 </html>
