Registration Module Completed

--- a/JavaAssignment/src/main/resources/templates/login.html
+++ b/JavaAssignment/src/main/resources/templates/login.html
@@ -9,13 +9,23 @@
 
 
 	<div class="container main">
+
 		<div class="sub-container secondary">
-		<h2 class="text-center mb-5">Login Page</h2>
+
+			<div th:if="${session.message}" class="container">
+			<div class="alert text-center"
+				th:classappend="${'alert-'+session.message.type}" role="alert">
+				<span th:text=${session.message.content}></span>
+			</div>
+			<th:block th:text="${#session.removeAttribute('message')}"></th:block>
+		</div>
+			<div class="container"></div>
+			<h2 class="text-center mb-5">Login Page</h2>
 			<form>
 				<!-- Email input -->
 				<div class="form-outline mb-4">
 					<input type="email" placeholder="Email Address" id="form3Example3"
-						class="form-control" name="email"/>
+						class="form-control" name="email" />
 				</div>
 
 				<!-- Password input -->
@@ -33,7 +43,9 @@
 
 				<!-- Register buttons -->
 				<div class="text-center">
-					<p>Don't Have An Account? <a th:href="@{/signup}">Sign Up</a></p>
+					<p>
+						Don't Have An Account? <a th:href="@{/signup}">Sign Up</a>
+					</p>
 
 				</div>
 			</form>
