--- a/JavaAssignment/src/main/resources/templates/login.html
+++ b/JavaAssignment/src/main/resources/templates/login.html
@@ -21,7 +21,7 @@
 		</div>
 			<div class="container"></div>
 			<h2 class="text-center mb-5">Login Page</h2>
-			<form>
+			<form th:action="@{/process-login}" method="post">
 				<!-- Email input -->
 				<div class="form-outline mb-4">
 					<input type="email" placeholder="Email Address" id="form3Example3"
