--- a/JavaAssignment/src/main/resources/templates/base.html
+++ b/JavaAssignment/src/main/resources/templates/base.html
@@ -3,7 +3,7 @@
 	th:fragment="layout(content)">
 <head>
 <meta charset="UTF-8" />
-<title th:text="${titlehtml}">Document</title>
+<title th:text="${title}">Document</title>
 <link rel="stylesheet" th:href="@{/css/index.css}" />
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
